[package]
name = "clipboard"
version = "1.0.1"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Simple clipboard utilities"
repository = "https://git.dragonma.us/dragonmaus/clipboard.rs"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
clipboard = "0.5"
program = { git = "https://git.dragonma.us/dragonmaus/program.rs", version = "2" }
