[package]
name = "clipboard"
version = "1.0.0"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2018"
description = "Simple clipboard utilities"
repository = "https://git.dragonma.us/rust/clipboard"
license = "BSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
clipboard = "0.5"
program = { git = "git://git.dragonma.us/rust/program" }
